update segue reference

--- a/PublicArt/Base.lproj/Main.storyboard
+++ b/PublicArt/Base.lproj/Main.storyboard
@@ -949,6 +949,6 @@
         <image name="tab-photos" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="yOj-sC-Yqh"/>
+        <segue reference="ce1-P5-afS"/>
     </inferredMetricsTieBreakers>
 </document>
